[gd_scene load_steps=2 format=2]

[ext_resource path="res://assets/ui/modules/ChercterSelectionCard.gd" type="Script" id=1]

[node name="CSC" type="Panel"]
margin_right = 40.0
margin_bottom = 96.0
rect_min_size = Vector2( 96, 128 )
theme_type_variation = "WindowBGPanel"
script = ExtResource( 1 )

[node name="button" type="Button" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
focus_mode = 0
mouse_default_cursor_shape = 2
theme_type_variation = "PanelButton"
toggle_mode = true
enabled_focus_mode = 0

[node name="vbc" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="title" type="Label" parent="vbc"]
margin_right = 96.0
margin_bottom = 10.0
align = 1
valign = 1

[node name="icon" type="TextureRect" parent="vbc"]
margin_left = 40.0
margin_top = 14.0
margin_right = 56.0
margin_bottom = 128.0
rect_min_size = Vector2( 16, 0 )
mouse_filter = 2
size_flags_horizontal = 4
size_flags_vertical = 7
expand = true
stretch_mode = 6

[node name="stats" type="VBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
alignment = 2

[node name="body" type="GridContainer" parent="stats"]
margin_top = 76.0
margin_right = 96.0
margin_bottom = 128.0
mouse_filter = 2
custom_constants/vseparation = 2
custom_constants/hseparation = 2
columns = 2

[node name="health_icon" type="TextureRect" parent="stats/body"]
margin_right = 16.0
margin_bottom = 16.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="health_text" type="Label" parent="stats/body"]
margin_left = 18.0
margin_top = 3.0
margin_right = 96.0
margin_bottom = 13.0
size_flags_horizontal = 3
text = "100"
valign = 1

[node name="speed_icon" type="TextureRect" parent="stats/body"]
margin_top = 18.0
margin_right = 16.0
margin_bottom = 34.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="speed_text" type="Label" parent="stats/body"]
margin_left = 18.0
margin_top = 21.0
margin_right = 96.0
margin_bottom = 31.0
size_flags_horizontal = 3
text = "100"
valign = 1

[node name="pwr_icon" type="TextureRect" parent="stats/body"]
margin_top = 36.0
margin_right = 16.0
margin_bottom = 52.0
rect_min_size = Vector2( 16, 16 )
mouse_filter = 2
expand = true
stretch_mode = 6

[node name="pwr_text" type="Label" parent="stats/body"]
margin_left = 18.0
margin_top = 39.0
margin_right = 96.0
margin_bottom = 49.0
size_flags_horizontal = 3
text = "100"
valign = 1

[connection signal="toggled" from="button" to="." method="OnToggled"]
